--- a/src/about/index.html
+++ b/src/about/index.html
@@ -2,22 +2,6 @@
 layout: default
 title: About
 section_id: about
-skills:
-  - title: Web Design
-    percentage: 84
-  - title: Web Development
-    percentage: 95
-  - title: Site Management
-    percentage: 70
-  - title: Branding
-    percentage: 61
-testimonials:
-  - quote: Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est.
-    author: David White, Designer at Huglab
-  - quote: Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.
-    author: David White, Designer at Huglab
-  - quote: Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est.
-    author: David White, Designer at Huglab
 ---
 
 <div class='full parallax' style='background-image: url(/assets/images/stock/brewing-beer.jpg); color: #fff;'>
@@ -29,99 +13,27 @@ testimonials:
   <div class='four spacing'></div>
 </div>
 
-<div class='full'>
-  <div class='row'>
-    <div class='twelve columns'>
-      <h3>Our history</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-    </div>
-    <div class='medium-6 columns'>
-      <h3>Our skills</h3>
-      <div class='mod modBarGraph'>
-        <ul class='bars'>
-          {% for skill in page.skills %}
-            <li>
-              <h4 style=''>
-                {{skill.title}}
-                <strong>{{skill.percentage}}%</strong>
-              </h4>
-              <p class='highlighted' data-percent='{{skill.percentage}}'></p>
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
+<div class="four spacing"></div>
+
+<div class="row">
+  <div class="large-12 columns">
+    <p>
+      The Cowtown Yeast Wranglers are a Calgary-based club of homebrewers and beer enthusiasts. The club was founded in 2007 and has now grown to over 170 active members, making it the largest beer and homebrew club in Canada. Club meetings are held on the first Wednesday of every month at 8:00 pm at various breweries and craft beer locations around town (except in the summer months). Meeting activities vary, but typically they begin with a discussion of club business, followed by technical brewing presentations and discussion, followed by beer evaluation. Meeting locations are announced in our monthly newsletter and on our Facebook page.
+    </p>
+    <p>
+      Currently, our club members include home brewers, pro brewers, certified beer judges,  and beer aficionados of all levels. Our members also include beginning brewers and those interested in beer and the brewing process. Come join our online discussion Forum and meet the gang. We welcome all levels of beer and brewing expertise, and the only prerequisite is that you have an interest and enthusiasm for our favourite beverage -- beer! Cheers!
+    </p>
   </div>
 </div>
 
+<div class="four spacing"></div>
 
-<div class='full'>
-  <div class='row'>
-    {% for member in site.data.members %}
-      <div class='small-6 medium-3 large-3 columns'>
-        <div class='mod modTeamMember'>
-          <div class='member'>
-            <img class="avatar" alt="" src="/{{ member.avatar }}" />
-            <div class='overlay'>
-              <div class='intro'>
-                <h3>{{member.name}}</h3>
-                <p>{{member.position}}</p>
-                <ul class='socials'>
-                  {% for social in member.socials %}
-                    <li>
-                      <a href='{{social.link}}'>
-                        <i class='fa fa-{{social.icon}}'></i>
-                      </a>
-                    </li>
-                  {% endfor %}
-                </ul>
-              </div>
-            </div>
-          </div>
-          <p class='centered-text'>{{member.desc}}</p>
-          <div class='two spacing'></div>
-        </div>
-      </div>
-    {% endfor %}
-  </div>
-</div>
-
-
-<div class='full parallax' style='background: #f5f5f5'>
-  <div class='row'>
-    <div class='large-12 columns'>
-      <p class='centered-text'>
-        <i class='fa fa-quote-left' style='color: #F9CE06; font-size: 36px;'></i>
-      </p>
-    </div>
-  </div>
-  <div class='row'>
-    <div class='large-12 columns'>
-      {% include section-header.html title="What our clients say" %}
-      <div class='spacing'></div>
-    </div>
-  </div>
-  <div class='row'>
-    <div class='large-12 columns'>
-      <div class='mod modTestimonials'>
-        <div class='row'>
-          <div class='small-12 columns'>
-            <div class='items centered-text'>
-              {% for testimonial in page.testimonials %}
-                <div class='item'>
-                  <p class='quote'>"{{testimonial.quote}}"</p>
-                  <p class='author'>- {{testimonial.author}}</p>
-                  <div class='two spacing'></div>
-                </div>
-              {% endfor %}
-            </div>
-          </div>
-          <div class='spacing'></div>
-        </div>
-      </div>
+<div id="monthly-meetings" class='full parallax' style='background-image: url(/assets/images/stock/hops-still-alive-2.jpg); color: #fff;'>
+  <div class="row">
+    <div class="large-12 columns">
+      {% include section-header.html title="Monthly Meetings" color="#fefefe" %}
+      <div class="spacing"></div>
+      {% include meetings.html  %}
     </div>
   </div>
 </div>
-
-{% include our-customers.html %}
