--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -7,21 +7,20 @@ section_id: contact
 <div class='full parallax' style='background-image: url(/assets/images/stock/beer-bottle.jpg); color: #fff;'>
   <div class='row'>
     <div class='large-12 columns'>
-      {% include section-header.html title="Contact Us" tagline="Send an email to us" color="#fff" class="big" %}
+      {% include section-header.html title="Contact Us" tagline="Fill out a form" color="#fff" class="big" %}
     </div>
   </div>
   <div class='four spacing'></div>
 </div>
 
-  <div class='full'>
-    <div class='row'>
-      <div class='medium-8 medium-centered columns'>
-        <div class='form'>
-          <iframe src="https://docs.google.com/forms/d/1MUrATeWyY7JSKxmgOocgGlriTQa8PXasD4-liVoajaA/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-        </div>
-        <div class='two spacing'></div>
+<div class='full'>
+  <div class='row'>
+    <div class='medium-8 medium-centered columns'>
+      <div class='form'>
+        <iframe src="https://docs.google.com/forms/d/1MUrATeWyY7JSKxmgOocgGlriTQa8PXasD4-liVoajaA/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       </div>
+      <div class='two spacing'></div>
     </div>
   </div>
-  <div class='four spacing'></div>
 </div>
+<div class='four spacing'></div>
