Content and formatting
re arranged yml stuff
added sponsors

--- a/src/membership/index.html
+++ b/src/membership/index.html
@@ -13,15 +13,16 @@ section_id: membership
   <div class='four spacing'></div>
 </div>
 
-Membership
-Description	Cost
-Annual member
-Annual memberships are good for the calendar year and allow you to attend all club meetings without paying a drop-in fee.  Annual members will also have their shipping charges subsidized if the member submits entries in a club-sanctioned brewing competition.  Annual members may also receive discounts at selected merchants.  A family membership discount is also available at $50/year.
-
-Click here to apply for an annual membership. An option for online membership purchase is available once a membership form has been completed online.
-
-$30/year
-Drop-in member	Drop-in memberships are also available to attend individual club meetings.  The cost per meeting is $10 which subsidizes the cost of commercial beer samples.  Annual members are not required to pay drop-in fees.  	$10/meeting
+<div class='full'>
+  {% include membership-types.html %}
+  <div class="row">
+    <div class="large-12 columns">
+      <p class="centered-text">
+        <a class="button" href="/membership/join">JOIN / RENEW</a>
+      </p>
+    </div>
+  </div>
+</div>
 
 
 
