--- a/src/membership/join/index.html
+++ b/src/membership/join/index.html
@@ -7,13 +7,24 @@ section_id: join
 <div class='full parallax' style='background-image: url(/assets/images/stock/judging.jpg); color: #fff;'>
   <div class='row'>
     <div class='twelve columns'>
-      {% include section-header.html title="Join" color="#fff" tagline="signup" class="big" %}
+      {% include section-header.html title="Join / Renew" color="#fff" tagline="do it" class="big" %}
     </div>
   </div>
   <div class='four spacing'></div>
 </div>
 
+<div class="full">
+  {% include membership-types.html %}
+</div>
+
 <div id="join" class='full'>
+  <div class='row'>
+    <div class='tweleve columns'>
+      <p class='text-center lead'>
+        When you fill out the form below, make sure you scroll back to the top and follow the PayPal link.
+      </p>
+    </div>
+  </div>
   <div class='row'>
     <div class='medium-8 medium-centered columns'>
       <div class='form'>
