fix link cleanup twitter widget in footer add benefits

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@ slides:
       klass: bottom-to-top
       items:
         - text: <i class="fa fa-user-plus"></i> Join or Renew
-          link_to: http://themeforest.net/user/honryou/portfolio?ref=honryou
+          link_to: /membership/join/
   - bg: assets/images/stock/refreshing-beer.jpg
     klass: centered-text
     small_title:
