--- a/src/membership/index.html
+++ b/src/membership/index.html
@@ -15,6 +15,8 @@ section_id: membership
 
 <div class='full'>
   {% include membership-types.html %}
+  {% include benefits.html %}
+  <div class='four spacing'></div>
   <div class="row">
     <div class="large-12 columns">
       <p class="centered-text">
