--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@ slides:
   <div class='row'>
     <div class='large-12 columns'>
       <p class='centered-text'>
-        <a class='button' href='blog.html'>See more posts</a>
+        <a class='button' href='blog/'>See more posts</a>
       </p>
     </div>
   </div>
