--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@ slides:
         {% endfor %}
         <div class='content'>
           <p class='date'>{{post.date | date: "%B %d, %Y" }}</p>
-          <h4><a href="#">{{post.title}}</a></h4>
+          <h4><a href="{{post.url}}">{{post.title}}</a></h4>
           <p>{{post.excerpt}}</p>
 
           <div class="tags">
