Getting ready to move to prod

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,16 @@ slides:
     klass: centered-text
     small_title:
       klass: bottom-to-top
-      text: You know you want to
+      text: It's that time again
     title:
       klass: bottom-to-top
-      text: Membership
+      text: Renewals
     buttons:
       klass: bottom-to-top
       items:
         - text: <i class="fa fa-user-plus"></i> Join or Renew
           link_to: /membership/join/
-  - bg: assets/images/stock/refreshing-beer.jpg
+  - bg: assets/images/stock/hops-1405519.jpg
     klass: centered-text
     small_title:
       klass: bottom-to-top
@@ -29,6 +29,19 @@ slides:
       items:
         - text: <i class="fa fa-user-plus"></i> Monthly Meetings
           link_to: '#monthly-meetings'
+  - bg: assets/images/stock/hops-1405519.jpg
+    klass: centered-text
+    small_title:
+      klass: bottom-to-top
+      text: start a conversation
+    title:
+      klass: bottom-to-top
+      text: Join the forum
+    buttons:
+      klass: bottom-to-top
+      items:
+        - text: <i class="fa fa-comments"></i> Forum
+          link_to: 'https://muut.com/cowtownyeastwranglers'
 
 ---
 
