New blog post, change commenting system

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,19 @@ slides:
     klass: centered-text
     small_title:
       klass: bottom-to-top
+      text: It's alive
+    title:
+      klass: bottom-to-top
+      text: New Site & Forum
+    buttons:
+      klass: bottom-to-top
+      items:
+        - text: Read More
+          link_to: /New-Site-and-Forums.html
+  - bg: assets/images/stock/hops-1405519.jpg
+    klass: centered-text
+    small_title:
+      klass: bottom-to-top
       text: It's that time again
     title:
       klass: bottom-to-top
