update forum links, more hero images

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@ slides:
       items:
         - text: Read More
           link_to: /New-Site-and-Forums.html
-  - bg: assets/images/stock/hops-1405519.jpg
+  - bg: assets/images/stock/refreshing-beer.jpg
     klass: centered-text
     small_title:
       klass: bottom-to-top
@@ -29,7 +29,7 @@ slides:
       items:
         - text: <i class="fa fa-user-plus"></i> Join or Renew
           link_to: /membership/join/
-  - bg: assets/images/stock/hops-1405519.jpg
+  - bg: assets/images/stock/cheers.jpg
     klass: centered-text
     small_title:
       klass: bottom-to-top
@@ -42,7 +42,7 @@ slides:
       items:
         - text: <i class="fa fa-user-plus"></i> Monthly Meetings
           link_to: '#monthly-meetings'
-  - bg: assets/images/stock/hops-1405519.jpg
+  - bg: assets/images/stock/bottle-caps.jpg
     klass: centered-text
     small_title:
       klass: bottom-to-top
@@ -54,7 +54,7 @@ slides:
       klass: bottom-to-top
       items:
         - text: <i class="fa fa-comments"></i> Forum
-          link_to: 'https://muut.com/cowtownyeastwranglers'
+          link_to: '/forums/'
 
 ---
 
