now with images inlined

--- a/src/forums/index.html
+++ b/src/forums/index.html
@@ -3,11 +3,10 @@ layout: default
 title: Forums
 section_id: forums
 ---
-
 <div class='full'>
   <div class='row'>
     <div class='medium-12 medium-centered columns'>
-      <a class="muut" href="https://muut.com/i/cowtownyeastwranglers">Loading...</a> <script src="//cdn.muut.com/1/moot.min.js"></script>
+      <a class="muut" href="https://muut.com/i/cowtownyeastwranglers">cowtownyeastwranglers</a>
     </div>
   </div>
 </div>
