December Meeting updates

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,19 @@ layout: default
 regenerate: true
 section_id: home
 slides:
+  - bg: assets/images/stock/beer-cask.jpg
+    klass: centered-text
+    small_title:
+      klass: bottom-to-top
+      text: Drunk Santa & Cask Beer
+    title:
+      klass: bottom-to-top
+      text: The December Meeting
+    buttons:
+      klass: bottom-to-top
+      items:
+        - text: Get The Details
+          link_to: /monthly%20meetings/December-2016-Meeting-at-Tool-Shed.html
   - bg: assets/images/stock/hops-1405519.jpg
     klass: centered-text
     small_title:
@@ -15,7 +28,7 @@ slides:
       klass: bottom-to-top
       items:
         - text: Read More
-          link_to: /New-Site-and-Forums.html
+          link_to: new%20site/New-Site-and-Forums.html
   - bg: assets/images/stock/refreshing-beer.jpg
     klass: centered-text
     small_title:
