--- a/src/membership/join/index.html
+++ b/src/membership/join/index.html
@@ -49,7 +49,12 @@ section_id: join
       <p><strong>AND</strong></p>
     </div>
   </div>
-  <div class='row'>
+  <div id='membership-form' class='row'>
+    <div class='medium-8 medium-centered columns'>
+      <div id='payment-success' style="display: none;" class="alert-box success text-center">
+        Thank you for your payment. Please fill out the following form to complete your membership.
+      </div>
+    </div>
     <div class='medium-8 medium-centered columns'>
       <div class='form'>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMLYKSr1p2y8f2dDQu1rLSOOueahNPzV9d95SkjyE-bA3eKA/viewform?embedded=true" width="100%" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
