fix contact page, more text shadows, add topic url, remove unused icon

--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -7,7 +7,7 @@ section_id: contact
 <div class='full parallax' style='background-image: url(/assets/images/stock/beer-bottle.jpg); color: #fff;'>
   <div class='row'>
     <div class='large-12 columns'>
-      {% include section-header.html title="Contact Us" tagline="Fill out a form" color="#fff" class="big" %}
+      {% include section-header.html title="Contact Us" color="#fff" class="big" %}
     </div>
   </div>
   <div class='four spacing'></div>
@@ -17,7 +17,23 @@ section_id: contact
   <div class='row'>
     <div class='medium-8 medium-centered columns'>
       <div class='form'>
-        <iframe src="https://docs.google.com/forms/d/1MUrATeWyY7JSKxmgOocgGlriTQa8PXasD4-liVoajaA/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <p>Your best bet is to hit us up on the social media of your choice.</p>
+
+        <div class="fadein mod modIconText appear" data-delay="0">
+          <div class="icon-text-simple">
+            <a href='https://www.facebook.com/Official-Cowtown-Yeast-WRanglers-100822796771293/'><i class="fa fa-facebook"></i></a>
+            <h3><a href='https://www.facebook.com/Official-Cowtown-Yeast-WRanglers-100822796771293/'>facebook</a></h3>
+          </div>
+          <div class="two spacing"></div>
+        </div>
+        <div class="fadein mod modIconText appear" data-delay="0">
+          <div class="icon-text-simple">
+            <a href='https://twitter.com/yeastwranglers'><i class="fa fa-twitter"></i></a>
+            <h3><a href='https://twitter.com/yeastwranglers'>twitter</a></h3>
+          </div>
+          <div class="two spacing"></div>
+        </div>
+        <!--<iframe src="https://docs.google.com/forms/d/1MUrATeWyY7JSKxmgOocgGlriTQa8PXasD4-liVoajaA/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
       </div>
       <div class='two spacing'></div>
     </div>
