Add a sponsors page

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,12 @@ section_id: home
 </div>
 
 <div class='full'>
+  <div class='row'>
+    <div class='large-12 columns'>
+      {% include section-header.html title="Our Sponsors" %}
+      <div class='spacing'></div>
+    </div>
+  </div>
   {% include sponsors.html %}
 </div>
 
