--- a/src/membership/newsletter/index.html
+++ b/src/membership/newsletter/index.html
@@ -31,12 +31,12 @@ section_id: newsletter
       </div>
       <div class="mc-field-group">
         <label for="mce-FNAME">First Name </label>
-        <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+        <input type="text" value="" name="FNAME" class="text-input" id="mce-FNAME">
       </div>
       <div class="mc-field-group">
         <label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
       </label>
-        <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+        <input type="text" value="" name="LNAME" class="text-input required" id="mce-LNAME">
       </div>
       <div class="indicates-required help-text"><span class="asterisk">*</span> indicates required</div>
         <div id="mce-responses" class="clear">
