Add more meetings, change meetings to calendar
post about getting to the community center

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@ section_id: home
 <div id="monthly-meetings" class='full parallax' style='background-image: url(/assets/images/stock/hops-still-alive-2.jpg); color: #fff;'>
   <div class="row">
     <div class="large-12 columns">
-      {% include section-header.html title="Monthly Meetings" color="#fefefe" %}
+      {% include section-header.html title="Club Calendar" color="#fefefe" %}
       <div class="spacing"></div>
       {% include meetings.html  %}
     </div>
