--- a/src/membership/join/index.html
+++ b/src/membership/join/index.html
@@ -33,41 +33,28 @@ section_id: join
 
     <div class='medium-8 medium-centered columns'>
       <div class='form'>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMLYKSr1p2y8f2dDQu1rLSOOueahNPzV9d95SkjyE-bA3eKA/viewform?embedded=true"
-          width="100%" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <div id="wufoo-rizdtnt1vl4p6z">
+          Fill out my <a href="https://chrisvdp.wufoo.com/forms/rizdtnt1vl4p6z">online form</a>.
+          </div>
+          <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">There are tons of <a href="http://www.wufoo.com/features/">Wufoo features</a> to help make your forms awesome.</div>
+          <script type="text/javascript">var rizdtnt1vl4p6z;(function(d, t) {
+          var s = d.createElement(t), options = {
+          'userName':'chrisvdp',
+          'formHash':'rizdtnt1vl4p6z',
+          'autoResize':true,
+          'height':'821',
+          'async':true,
+          'host':'wufoo.com',
+          'header':'show',
+          'ssl':true};
+          s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+          s.onload = s.onreadystatechange = function() {
+          var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+          try { rizdtnt1vl4p6z = new WufooForm();rizdtnt1vl4p6z.initialize(options);rizdtnt1vl4p6z.display(); } catch (e) {}};
+          var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+          })(document, 'script');</script>
       </div>
       <div class='two spacing'></div>
-    </div>
-  </div>
-  <div class='row'>
-    <div class='medium-8 medium-centered text-center columns'>
-      <p><strong>AND</strong></p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="medium-4 medium-centered columns">
-      <div class="panel text-center">
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-          <input type="hidden" name="cmd" value="_s-xclick">
-          <input type="hidden" name="hosted_button_id" value="D8A4K4X2WCLHW">
-          <table>
-            <tr>
-              <td><input type="hidden" name="on0" value="Membership Type">Membership Type</td>
-            </tr>
-            <tr>
-              <td>
-                <select name="os0">
-                  <option value="2017 .5 year Single Membership">2017 .5 year Single Membership $15.00 CAD</option>
-                  <option value="2017 .5 year Family Membership">2017 .5 year Family Membership $25.00 CAD</option>
-                </select>
-              </td>
-            </tr>
-          </table>
-          <input type="hidden" name="currency_code" value="CAD">
-          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
-      </div>
     </div>
   </div>
 </div>
