update payment, meetings and slides

--- a/src/membership/join/index.html
+++ b/src/membership/join/index.html
@@ -15,7 +15,8 @@ section_id: join
 
 <div class="full">
   <div id='payment-success' style="display: none;" class="alert-box success text-center">
-    Thank you for your payment! Please ensure you have also filled out the membership form. Your Membership card will avaliable at monthly meetings or at the Vineyard.
+    Thank you for your payment! Please ensure you have also filled out the membership form. Your Membership card will
+    avaliable at monthly meetings or at the Vineyard.
   </div>
   {% include membership-types.html %}
 </div>
@@ -33,29 +34,20 @@ section_id: join
 
     <div class='medium-8 medium-centered columns'>
       <div class='form'>
-        <div id="wufoo-rizdtnt1vl4p6z">
-          Fill out my <a href="https://chrisvdp.wufoo.com/forms/rizdtnt1vl4p6z">online form</a>.
-          </div>
-          <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">There are tons of <a href="http://www.wufoo.com/features/">Wufoo features</a> to help make your forms awesome.</div>
-          <script type="text/javascript">var rizdtnt1vl4p6z;(function(d, t) {
-          var s = d.createElement(t), options = {
-          'userName':'chrisvdp',
-          'formHash':'rizdtnt1vl4p6z',
-          'autoResize':true,
-          'height':'821',
-          'async':true,
-          'host':'wufoo.com',
-          'header':'show',
-          'ssl':true};
-          s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-          s.onload = s.onreadystatechange = function() {
-          var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-          try { rizdtnt1vl4p6z = new WufooForm();rizdtnt1vl4p6z.initialize(options);rizdtnt1vl4p6z.display(); } catch (e) {}};
-          var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-          })(document, 'script');</script>
+        <iframe height="1440"
+                allowTransparency="true"
+                frameborder="0"
+                scrolling="no"
+                style="width:100%;border:none"
+                src="https://chrisvdp.wufoo.com/embed/s1y7z4g2065au6o/">
+            <a href="https://chrisvdp.wufoo.com/forms/s1y7z4g2065au6o/">
+              Fill out my Wufoo form!
+            </a>
+          </iframe>
+
+
+        <div class='two spacing'></div>
       </div>
-      <div class='two spacing'></div>
     </div>
   </div>
-</div>
-<div class='four spacing'></div>
+  <div class='four spacing'></div>
