--- a/src/membership/join/index.html
+++ b/src/membership/join/index.html
@@ -21,36 +21,9 @@ section_id: join
   {% include membership-types.html %}
 </div>
 
-<div class="alert-box warning text-center">
-  We are currently in the process of becoming a legal non-profit association. While we go through this process our payment
-  provider is locked.<br>As a result, we cannot accept payments from new or existing members at this time. <br><br>If you would like to be notified 
-  when we are accepting payments again, please fill out the form below. <br><br>If you are wanting to come to a meeting, but not currently a member, we have a drop in policy,
-  so you are welcome to join us! <br><br>
-  Happy Brewing!
-</div>
-
-<div id='membership-form' class='row'>
-
-  <div class='medium-8 medium-centered columns'>
-    <div class='form'>
-      <iframe title="Embedded Wufoo Form"
-              height="260"
-              allowTransparency="true"
-              frameborder="0"
-              scrolling="no"
-              style="width:100%;border:none"
-              src="https://chrisvdp.wufoo.com/embed/w1vztvsq0dmm87m/">
-        <a href="https://chrisvdp.wufoo.com/forms/w1vztvsq0dmm87m/">
-          Fill out my Wufoo form!
-        </a>
-      </iframe>
-
-    </div>
-  </div>
-</div>
 
 
-<!-- <div id="join" class='full'>
+<div id="join" class='full'>
   <div class='row'>
     <div class='tweleve columns'>
       <div class="alert-box warning text-center">
@@ -63,20 +36,19 @@ section_id: join
 
     <div class='medium-8 medium-centered columns'>
       <div class='form'>
-        <iframe height="1440"
-                allowTransparency="true"
-                frameborder="0"
-                scrolling="no"
-                style="width:100%;border:none"
-                src="https://chrisvdp.wufoo.com/embed/s1y7z4g2065au6o/">
-            <a href="https://chrisvdp.wufoo.com/forms/s1y7z4g2065au6o/">
-              Fill out my Wufoo form!
-            </a>
-          </iframe>
-
-
+        <iframe title="Embedded Wufoo Form"
+          height="1147"
+          allowTransparency="true"
+          frameborder="0"
+          scrolling="no"
+          style="width:100%;border:none"
+          src="https://chrisvdp.wufoo.com/embed/ppccnvb1jgnsb6/">
+          <a href="https://chrisvdp.wufoo.com/forms/ppccnvb1jgnsb6/">
+            Fill out my Wufoo form!
+          </a>
+        </iframe>
         <div class='two spacing'></div>
       </div>
     </div>
-  </div> -->
+  </div>
   <div class='four spacing'></div>
